# Multi-Object-Detection-and-Persistent-ID-Tracking-in-Public-SportsEvent-Footage

./: .gitignore  README.md  _Short Technical Report.docx  pyproject.toml
model/run_1/: args.yaml  results.csv
src/: 1_model_training.ipynb  2_main.ipynb  3_test_ball.ipynb  ball.py
