[project]
name = "multi-object-detection-and-persistent-id-tracking-in-public-sportsevent-footage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "lapx>=0.9.4",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.4.33",
    "torch",
    "torchvision",
    "torchaudio",
    "yt-dlp>=2026.3.17",
]

# ... aapka upar ka code ...

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# 👇 Yeh naya section add karo
[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
